[metadata]
name=grid
version=0.1.0a1
author=OpenMined
license=Apache-2.0
author_email=contact@openmined.org
home-page=https://github.com/OpenMined/Grid
description-file=README.md
long-description-content-type = text/markdown; charset=UTF-8
summary=A machine learning framework backed by an on-demand, parallel compute grid.

classifier =
    Development Status :: 3 - Alpha
keywords=
    deep
    learning
    artificial
    intelligence
    homomorphic
    encryption

[files]
packages=grid

[aliases]
test=pytest

[bdist_wheel]
universal=0
