[package]
name    = "syft"
version = "0.5.0"
authors = ["Madhava Jay <me@madhavajay.com>"]
edition = "2018"

[package.metadata.maturin]
classifier      = ["Programming Language :: Python", "Programming Language :: Rust"]
requires-python = ">=3.6"

[lib]
name       = "syft"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.13.2", features = ["extension-module"] }
