[tool.poetry]
name = "PyGrid Network"
version = "0.1.0"
description = "PyGrid Network!"
authors = ["Ionesio Junior <ionesiojr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
gevent = "^20.6.2"
gevent-websocket = "^0.10.1"
gunicorn = "^20.0.4"
Flask = "^1.1.1"
Flask-Sockets = "^0.2.1"
numpy = "^1.18.5"
sqlitedict = "^1.6.0"
syft = { git = "https://github.com/OpenMined/PySyft.git", branch = "syft_0.3.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
