[tool.poetry]
name = "PyGrid Network"
version = "0.1.0"
description = "PyGrid Network!"
authors = ["Ionesio Junior <ionesiojr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
gevent = "^20.6.2"
gevent-websocket = "^0.10.1"
gunicorn = "^20.0.4"
Flask = "^1.1.1"
Flask-Sockets = "^0.2.1"
numpy = "^1.18.5"
sqlitedict = "^1.6.0"
Flask-Migrate = "^2.5.3"
SQLAlchemy-Utils = "^0.36.8"
PyJWT = "^1.7.1"
sqlalchemy-mixins = "^1.2.1"
syft = {git = "https://github.com/OpenMined/PySyft", rev = "pygrid_client"}


[tool.poetry.dev-dependencies]
black = "^20.8b1"
coverage = "^4.5.3"
pre-commit = "^2.6.0"
pytest = "^5.4.3"
docformatter = "^1.3.1"
flake8 = "^3.8.3"
flake8-comprehensions = "^3.2.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
