[tool.poetry]
name = "openmined.gridnode"
version = "0.1.0"
description = "PyGrid Node"
authors = ["OpenMined <contact@openmined.org>"]
license = "Apache-2.0"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.7"
gevent = "^20.6.2"
gevent-websocket = "^0.10.1"
gunicorn = "^20.0.4"
Flask = "^1.1.1"
Flask-Sockets = "^0.2.1"
requests = "^2.22.0"
Flask-SQLAlchemy = "^2.4.4"
Flask-Migrate = "^2.5.3"
Flask-Cors = "^3.0.7"
Flask-Executor = "^0.9.3"
Flask-Login = "^0.5.0"
sqlalchemy_mixins = "^1.2.1"
pyjwt = "^1.7.1"
psycopg2-binary = "^2.8.5"
requests-toolbelt = "^0.9.1"
syft = "^0.2.8"
redis = "^3.5.3"
sqlalchemy_utils = "^0.36.8"
numpy = "^1.18.5"
wsaccel = "^0.6.2"
papermill = "~=2.0.0"

[tool.poetry.dev-dependencies]
aiounittest = "^1.4.0"
black = "^19.10b0"
coverage = "^4.5.3"
pre-commit = "^2.6.0"
pytest = "^5.4.3"
isort = "^5.0.5"
docformatter = "^1.3.1"
flake8 = "^3.8.3"
flake8-comprehensions = "^3.2.3"
papermill = "~=2.0.0"
jupyter = "~=1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
